@@ -202,6 +202,12 @@ NEW FEATURES
 	of buffer required, connections such as gzfile() and bzfile()
 	can now write arbitrarily long lines, not just 100000 chars.
 
+    o	The R session temporary directory is now set in C code using
+	the same algorithm whether or not the shell front-end is used
+	and on all platforms.  This looks at environment variables
+	TMPDIR, TMP and TEMP in turn, and checks if they point to a
+	writable directory.
+
 
 DEPRECATED & DEFUNCT
 
